[sd-4255]-(squashed) - Layout issue once multiple flags are set for an item (#321)

--- a/scripts/superdesk-items-common/styles/media-archive.less
+++ b/scripts/superdesk-items-common/styles/media-archive.less
@@ -689,6 +689,9 @@
             .state-label {
                 margin-top: 2px;
                 margin-right: 10px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
             .label {
                 margin-right: 6px;
